# DungeonGame

./: .gitignore  DungeonGame.sln  LICENSE  README.md  docker-compose.yml
DungeonClient.Application/: CMakeLists.txt  main.cpp
DungeonClient/DungeonClient.Application/: CMakeLists.txt  main.cpp  main.h  vcpkg.json
DungeonClient/DungeonClient.Application/src/engine/graphics/: Renderer.h
DungeonClient/DungeonClient.Application/src/game/mappings/: CommonMappings.h  MovementMappings.h
DungeonClient/DungeonClient.Application/src/game/models/: Movement.h  Room.h
DungeonClient/DungeonClient.Application/src/game/network/: DungeonConnection.cpp
DungeonGame.Application/Dungeon/GenerateRoom/: GenerateRoomResult.cs  RoomType.cs
DungeonServer/: Dockerfile  DungeonGame.sln  README.md
DungeonServer.Application/: DungeonServer.Application.csproj
DungeonServer.Application.Tests/: DungeonServer.Application.Tests.csproj
DungeonServer.Application.Tests/Dungeon/: DungeonControllerTests.cs
DungeonServer.Application.Tests/Movement/: MovementManagerTests.cs
DungeonServer.Application.Tests/Movement/Storage/: MovementManagerTests.cs
DungeonServer.Application.Tests/Rooms/: InMemoryRoomStoreContractTests.cs  InMemoryRoomStoreTests.cs  PlayerSpawningTests.cs  RoomStoreContractTests.cs  RoomSubscriptionBehaviorTests.cs  RoomSubscriptionTests.cs
DungeonServer.Application.Tests/Rooms/Storage/: InMemoryRoomStoreContractTests.cs  InMemoryRoomStoreTests.cs
DungeonServer.Application/Abstractions/Core/: IMovementManager.cs  IPlayerController.cs
DungeonServer.Application/Abstractions/Dungeon/: IDungeonArchitect.cs  IDungeonController.cs
DungeonServer.Application/Core/PlayerController/: PlayerController.cs
DungeonServer.Application/Core/Shared/: Location.cs
DungeonServer.Application/Dungeon/: DungeonArchitect.cs
DungeonServer.Application/Dungeon/DungeonArchitect/: DungeonArchitect.cs
DungeonServer.Application/Dungeon/DungeonController/: DungeonController.cs
DungeonServer.Application/Dungeon/GenerateRoom/: GenerateRoomRequest.cs  GenerateRoomResult.cs  RoomType.cs
DungeonServer.Application/Dungeon/Room/: DungeonArchitect.cs  GenerateRoomRequest.cs  GenerateRoomResult.cs  IRoomStore.cs  InMemoryRoomStore.cs  RoomConstants.cs  RoomState.cs  RoomStateSnapshot.cs  RoomType.cs
DungeonServer.Service/: DungeonServer.Service.csproj  Program.cs
DungeonServer.Service.Tests/Integration/: ClientPathIntegrationTests.cs
DungeonServer.Service/Mappings/Core/: PlayerControllerMappings.cs
DungeonServer.Service/Mappings/Dungeon/: DungeonArchitectMappings.cs
DungeonServer.Service/Mappings/Shared/: SharedMappings.cs
DungeonServer.Service/Services/Core/: DungeonControllerService.cs  MovementControllerService.cs  PlayerControllerService.cs
DungeonServer.Service/Services/Dungeon/: DungeonArchitectService.cs  RoomControllerService.cs
DungeonServer/DungeonServer.Application/: DungeonServer.Application.csproj
DungeonServer/DungeonServer.Application.Tests/: DungeonServer.Application.Tests.csproj  TestHelpers.cs
DungeonServer/DungeonServer.Application.Tests/Caching/: RedisPlayerCacheTests.cs
DungeonServer/DungeonServer.Application.Tests/Dungeon/: DungeonControllerTests.cs
DungeonServer/DungeonServer.Application.Tests/Movement/: MovementManagerTests.cs  TickFlowTests.cs
DungeonServer/DungeonServer.Application.Tests/Persistence/: EfPlayerStorePersistenceTests.cs  EfRoomStoreErrorHandlingTests.cs  EfRoomStorePersistenceTests.cs
DungeonServer/DungeonServer.Application.Tests/Rooms/: InMemoryRoomStoreContractTests.cs  InMemoryRoomStoreTests.cs  PlayerSpawningTests.cs  RedisRoomSubscriptionRegistryTests.cs  RoomStoreContractTests.cs  RoomSubscriptionBehaviorTests.cs  RoomSubscriptionTests.cs
DungeonServer/DungeonServer.Benchmark/: BenchmarkConfig.cs  BenchmarkRunner.cs  DashboardServer.cs  DungeonServer.Benchmark.csproj  MetricsCollector.cs  Program.cs  Scenarios.cs  VirtualPlayer.cs  dashboard.html
DungeonServer/DungeonServer.Contracts/: DungeonServer.Contracts.csproj
DungeonServer/DungeonServer.Infrastructure/: DungeonServer.Infrastructure.csproj
DungeonServer/DungeonServer.Infrastructure/Caching/: IProtoCacheService.cs  RedisProtoCacheService.cs
DungeonServer/DungeonServer.Infrastructure/EntityFramework/: DungeonDbContext.cs  run-migrations.sh
DungeonServer/DungeonServer.Infrastructure/Migrations/: 20260219132740_InitialCreate.Designer.cs  20260219132740_InitialCreate.cs  DungeonDbContextModelSnapshot.cs
DungeonServer/DungeonServer.Infrastructure/Persistence/: DungeonDbContext.cs
DungeonServer/DungeonServer.Service/: DungeonServer.Service.csproj  Program.cs  appsettings.Development.json
DungeonServer/DungeonServer.Service/CustomMarshallers/: RoomSnapshotMarshaller.cs
DungeonServer/DungeonServer.Service/Properties/: launchSettings.json
DungeonServer/docs/: tick-system-architecture.md
contracts/: game_protocol.proto
contracts/Core/: dungeon_controller.proto  movement.proto  player.proto  room.proto  status.proto
contracts/Dungeon/: dungeon_manager.proto  dungeon_room.proto
contracts/Shared/: shared_types.proto
dungeon-engine-cpp/: CMakeLists.txt  main.cpp  main.h  vcpkg.json
dungeon-engine-cpp/src/: DungeonClient.cpp  DungeonClient.h
dungeon-engine-cpp/src/engine/graphics/: Renderer.cpp  Renderer.h
dungeon-engine-cpp/src/engine/network/: DungeonClient.cpp  DungeonClient.h
dungeon-engine-cpp/src/game/mappings/: MovementMappings.cpp  MovementMappings.h  PlayerMappings.h  RoomMappings.cpp  RoomMappings.h
dungeon-engine-cpp/src/game/models/: PlayerInfo.h  Room.h
dungeon-engine-cpp/src/game/network/: DungeonClient.cpp  DungeonClient.h  DungeonConnection.h  DungeonService.cpp  DungeonService.h
dungeon-service-csharp/: DungeonService.csproj  Program.cs
dungeon-service-csharp/Properties/: launchSettings.json
dungeon-service-csharp/Services/: DungeonArchitectService.cs
game-server-cpp/: CMakeLists.txt  game_protocol.grpc.pb.cc  game_protocol.grpc.pb.h  game_protocol.pb.cc  game_protocol.pb.h  main.cpp
(+134 files in other folders)
